# fp_rp_lidar

./: .gitignore  deploy.sh  my_config.rviz
src/: fastdds.xml
src/fp_odom/: CMakeLists.txt  package.xml
src/fp_odom/src/: fp_odom_receiver.cpp
src/fp_rplidar_ros2/: CMakeLists.txt  package.xml
src/fp_rplidar_ros2/src/: fp_rplidar_publisher.cpp
src/maps/: my_map.yaml
src/motor_controller/: CMakeLists.txt  package.xml
src/motor_controller/src/: motor_driver_node.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: nav_param.yaml  slam_toolbox_params.yaml
src/my_robot_description/launch/: display.launch.py  navigation.launch.py
src/my_robot_description/maps/: my_map.pgm
src/my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  my_robot.urdf.xacro
src/nav_motor_controller/: CMakeLists.txt  package.xml
src/nav_motor_controller/src/: nav_motor_controller_node.cpp
